
[[x28-batch-overrude]]
==== `@KafkaListener` Changes

It is now possible to specify whether the listener method is a batch listener on the method itself.
This allows the same container factory to be used for both record and batch listeners.

See <<batch-listeners>> for more information.

Batch listeners can now handle conversion exceptions.

See <<batch-listener-conv-errors>> for more information.

`RecordFilterStrategy`, when used with batch listeners, can now filter the entire batch in one call.
See the note at the end of <<batch-listeners>> for more information.

[[x28-template]]
==== `KafkaTemplate` Changes

You can now receive a single record, given the topic, partition and offset.
See <<kafka-template-receive>> for more information.

[[x28-eh]]
==== `CommonErrorHandler` Added

The legacy `GenericErrorHandler` and its sub-interface hierarchies for record an batch listeners have been replaced by a new single interface `CommonErrorHandler` with implementations corresponding to most legacy implementations of `GenericErrorHandler`.
See <<error-handlers>> for more information.

[[x28-lcc]]
==== Listener Container Changes

The `interceptBeforeTx` container property is now `true` by default.

The `authorizationExceptionRetryInterval` property has been renamed to `authExceptionRetryInterval` and now applies to `AuthenticationException` s in addition to `AuthorizationException` s previously.
Both exceptions are considered fatal and the container will stop by default, unless this property is set.

See <<kafka-container>> and <<container-props>> for more information.

[[x28-serializers]]
==== Serializer/Deserializer Changes

The `DelegatingByTopicSerializer` and `DelegatingByTopicDeserializer` are now provided.
See <<delegating-serialization>> for more information.

[[x28-dlpr]]
==== `DeadLetterPublishingRecover` Changes

The property `stripPreviousExceptionHeaders` is now `true` by default.

See <<dlpr-headers>> for more information.